[B] Fix color contrast in annotation textarea

--- a/client/src/theme/styles/components/global/annotation/_editor.scss
+++ b/client/src/theme/styles/components/global/annotation/_editor.scss
@@ -74,7 +74,7 @@
     }
 
     &:focus-visible::placeholder {
-      color: $accentPrimary;
+      color: $neutral90;
     }
   }
 
